# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
migrations/: 20241004050831_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
